--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     </div> 
    
-      <h1>Velkommen til Halden iderettspark!</h1>
+      <h1>Velkommen til Halden iderettspark!!</h1>
 
-      <p>a</p>
+      
 
       <br>
 
