--- a/Linker.html
+++ b/Linker.html
@@ -23,7 +23,7 @@
     </div>
     <a href="Omparken.html">Om parken</a>
     <a class="active" href="Linker.html">Linker</a>
-    <img src="Halden.png" alt="Halden kommune" class="split" height="50" width="200">
+    <img src="Logoo.png" alt="logo" class="split" height="50" width="200">
   </div>  
 
     <h1>Linker for mer info</h1>
