--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <a href="Omparken.html">Om parken</a>
         <a href="Linker.html">Linker</a>
-        <img src="Halden.png" alt="Halden kommune" class="split" height="50" width="200">
+        <img src="Logoo.png" alt="logo" class="split" height="50" width="200">
 
     </div> 
    
